@@ -3,6 +3,7 @@ title=Edit Topic
 
 [validators]
 validators..AddCriterion = validate_add_criterion
+validators..SetSortCriterion = validate_set_sort
 
 [actions]
 action.failure=traverse_to:string:criterion_edit_form
